--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,12 +24,9 @@
 
 <nav class="navbar navbar-inverse" th:fragment="header">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
-        </div>
+
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Houses</a></li>
+            <li class="active"><a href="/">Home</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a th:href="@{'/signup'}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
