--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,33 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div th:each="a:${ads}">
+                <div class="card"
+                     style="width: 30%;margin: 13px;padding: 13px; box-shadow: 10px 10px 20px gray;float: left;">
+                    <img class="card-img-top" th:src="@{'uploads/'+${a.imagePath}}" width="100%" alt="Card image cap">
+                    <div class="card-body">
+                        <h3 class="card-title" th:text="area +${a.area}"></h3>
+                        <h3 class="card-title" th:text="price +${a.price}"></h3>
+                        <h4 class="card-title" th:text="${a.houseType}"></h4>
+                        <p class="card-text" th:text="${a.description.substring(0,150)}"></p>
+                        <a href="#" class="btn btn-primary">Continue</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <ul class="nav nav-pills">
+                <li th:each="p,status: ${pages}">
+                    <a th:href="@{/(page=${status.index},size=10)}" th:text="${status.index}"></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
