--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,10 +16,10 @@
                     <form th:href="@{'/login'}" method="post">
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                         <div class="form-group">
-                            <input type="email" name="username" placeholder="email" required class="form-control">
+                            <input value="rza@gmail.com" type="email" name="username" placeholder="email" required class="form-control">
                         </div>
                         <div class="form-group">
-                            <input type="password" name="password" placeholder="password" required class="form-control">
+                            <input value="1111" type="password" name="password" placeholder="password" required class="form-control">
                         </div>
                         <button type="submit" class="btn btn-primary">Login</button>
                         <div th:if="${param.error}">
