--- a/src/main/resources/templates/profile/home.html
+++ b/src/main/resources/templates/profile/home.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <a th:href="@{'/profile/create-ad'}">
+            <a th:href="@{'/profile/ads/create'}">
                 <div class="panel panel-success">
                    <div class="panel-heading">
                        <span class="glyphicon glyphicon-ok"></span>
